# amazon-Competitor-analysis-by-Jaz

./: .gitignore  README.md  data.json  main.py  pyproject.toml
src/: llm.py
tests/: test_keys.py
